objects/Service_Order_Product_Group__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Product Groups for Cloud Quote Output.</description>
    <fields>
        <fullName>Billing_Type__c</fullName>
        <description>What it Does? To store the type of billing (recurring, non recurring, telco etc) for PureConnect Cloud categories
Downstream Impact? PureConnect Cloud Output pdf will get impacted.
Which department is owner? Sales Ops</description>
        <label>Billing Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edition__c</fullName>
        <label>Edition</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_Text__c</fullName>
        <label>Header Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Sort Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Service Order Product Group</label>
    <listViews>
        <fullName>All_Product_Groups</fullName>
        <columns>NAME</columns>
        <columns>Edition__c</columns>
        <columns>Group_Name__c</columns>
        <columns>Header_Text__c</columns>
        <columns>Billing_Type__c</columns>
        <columns>Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Product Groups</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PC_PCC</fullName>
        <columns>NAME</columns>
        <columns>Edition__c</columns>
        <columns>Group_Name__c</columns>
        <columns>Header_Text__c</columns>
        <columns>Billing_Type__c</columns>
        <columns>Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Edition__c</field>
            <operation>equals</operation>
            <value>PureCloud,PureConnect Cloud</value>
        </filters>
        <label>PC &amp; PCC</label>
        <language>en_US</language>
    </listViews>
</CustomObject>